// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uint16 schema test invalid values: -1 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be >= 0
    Path:     dataTypes/uint16.schema.json#/minimum
"
`;

exports[`uint16 schema test invalid values: 1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be integer
    Path:     dataTypes/uint16.schema.json#/type
"
`;

exports[`uint16 schema test invalid values: 65536 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be <= 65535
    Path:     dataTypes/uint16.schema.json#/maximum
"
`;
